==> LZH-ang/STM32_EVM_UAV/Code file/12FWLib_hwspi_oled/user/OLED/bsp_oled.c <==
#include "bsp_oled.h"
#include "oledfont.h"

uint8_t OLED_WR_Byte(uint8_t dat,uint8_t mode)
{
    if(mode)
        OLED_DC_Set();
    else
        OLED_DC_Clr();
	OLED_CS_Clr();
	SPITimeout = SPIT_FLAG_TIMEOUT;
    /* 等待发送缓冲区为空，TXE事件 */
    while (SPI_I2S_GetFlagStatus(OLED_SPI, SPI_I2S_FLAG_TXE) == RESET)
    {
        if((SPITimeout--) == 0) return SPI_TIMEOUT_UserCallback(0);
    }
	SPI_I2S_ClearFlag(OLED_SPI, SPI_I2S_FLAG_TXE);
	SPI_I2S_SendData(OLED_SPI, dat);
	SPITimeout = SPIT_FLAG_TIMEOUT;
    /* 等待发送缓冲区为空，TXE事件 */
    while (SPI_I2S_GetFlagStatus(OLED_SPI, SPI_I2S_FLAG_TXE) == RESET)
    {
        if((SPITimeout--) == 0) return SPI_TIMEOUT_UserCallback(1);
    }
	SPI_I2S_ClearFlag(OLED_SPI, SPI_I2S_FLAG_TXE);
	/* 等待发送完，BSY事件 */
    while (SPI_I2S_GetFlagStatus(OLED_SPI, SPI_I2S_FLAG_BSY) == SET)
    {
        if((SPITimeout--) == 0) return SPI_TIMEOUT_UserCallback(2);
    }
	OLED_CS_Set();
    OLED_DC_Set();
	return 0;
}

uint8_t OLED_Init(void)
{
    GPIO_InitTypeDef GPIO_InitStructure;
	SPI_InitTypeDef  SPI2_InitStructure;
	
    RCC_APB2PeriphClockCmd(OLEDGPIO_RCC, ENABLE);		//使能GPIO端口时钟
	RCC_APB1PeriphClockCmd(OLEDSPI_RCC, ENABLE);		//使能SPI2端口时钟
    GPIO_InitStructure.GPIO_Pin = OLED_RES|OLED_DC;
    GPIO_InitStructure.GPIO_Mode = GPIO_Mode_Out_PP;	//推挽输出
    GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;	//速度50MHz
    GPIO_Init(OLED_GPIOA, &GPIO_InitStructure);	  		//初始化GPIOA
    GPIO_InitStructure.GPIO_Pin = OLED_SCK|OLED_MOSI;
	GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AF_PP;		//复用推挽输出
    GPIO_Init(OLED_GPIOB, &GPIO_InitStructure);	  		//初始化GPIOB
	GPIO_InitStructure.GPIO_Pin = OLED_NSS;
	GPIO_InitStructure.GPIO_Mode = GPIO_Mode_Out_PP;	//推挽输出
//	GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AF_PP;		//复用推挽输出
    GPIO_Init(OLED_GPIOB, &GPIO_InitStructure);	  		//初始化GPIOB
	
	SPI2_InitStructure.SPI_BaudRatePrescaler = SPI_BaudRatePrescaler_16;
	SPI2_InitStructure.SPI_CPHA = SPI_CPHA_2Edge;
	SPI2_InitStructure.SPI_CPOL = SPI_CPOL_High;
	SPI2_InitStructure.SPI_DataSize = SPI_DataSize_8b;
	SPI2_InitStructure.SPI_FirstBit = SPI_FirstBit_MSB;
	SPI2_InitStructure.SPI_NSS = SPI_NSS_Soft;
//	SPI2_InitStructure.SPI_NSS = SPI_NSS_Hard;
	SPI2_InitStructure.SPI_Direction = SPI_Direction_1Line_Tx;
	SPI2_InitStructure.SPI_Mode = SPI_Mode_Master;
	SPI2_InitStructure.SPI_CRCPolynomial = 7;
	SPI_Init(OLED_SPI, &SPI2_InitStructure);
    GPIO_SetBits(OLED_GPIOA,OLED_RES|OLED_DC);
    GPIO_SetBits(OLED_GPIOB,OLED_NSS);
	SPI_Cmd(OLED_SPI, ENABLE);

    OLED_RES_Clr();
    SysTick_Delay_ms(100);
    OLED_RES_Set();
    OLED_WR_Byte(0xAE,OLED_CMD); /* Display OFF/ON:(AEH - AFH) */
    OLED_WR_Byte(0xB0,OLED_CMD); /* Set Page Address:(B0H - B7H) */
    OLED_WR_Byte(0x02,OLED_CMD); /* Set Lower Column Address:(00H - 0FH) */
    OLED_WR_Byte(0x10,OLED_CMD); /* Set Higher Column Address:(10H - 1FH) */
    OLED_WR_Byte(0xD5,OLED_CMD); /* Divide Ratio/Oscillator Frequency Mode Set:(D5H) */
    OLED_WR_Byte(0x80,OLED_CMD); /* Divide Ratio/Oscillator Frequency Data Set:(00H - 3FH) */
    OLED_WR_Byte(0xA8,OLED_CMD); /* Multiplex Ration Mode Set:(A8H) */
    OLED_WR_Byte(0x3F,OLED_CMD); /* Multiplex Ration Data Set:(00H - 3FH) */
    OLED_WR_Byte(0xD3,OLED_CMD); /* Display Offset Mode Set:(D3H) */
    OLED_WR_Byte(0x00,OLED_CMD); /* Display Offset Data Set:(00H~3FH) */
    OLED_WR_Byte(0x40,OLED_CMD); /* Set Display Start Line:(40H - 7FH) */
    OLED_WR_Byte(0xAD,OLED_CMD); /* DC-DC Control Mode Set:(ADH) */
    OLED_WR_Byte(0x8B,OLED_CMD); /* DC-DC ON/OFF Mode Set:(8AH - 8BH)  */\
    OLED_WR_Byte(0xA1,OLED_CMD); /* Set Segment Re-map:(A0H - A1H) */
    OLED_WR_Byte(0xC8,OLED_CMD); /* Set Common Output Scan Direction:(C0H - C8H) */
    OLED_WR_Byte(0xDA,OLED_CMD); /* Common Pads Hardware Configuration Mode Set:(DAH) */
    OLED_WR_Byte(0x12,OLED_CMD); /* Sequential/Alternative Mode Set:(02H - 12H) */
    OLED_WR_Byte(0x81,OLED_CMD); /* The Contrast Control Mode Set:(81H) */
    OLED_WR_Byte(0xFF,OLED_CMD); /* Contrast Data Register Set:(00H - FFH) */
    OLED_WR_Byte(0xD9,OLED_CMD); /* Pre-charge Period Mode Set:(D9H) */
    OLED_WR_Byte(0x1F,OLED_CMD); /* Dis-charge/Pre-charge Period Data Set:(00H - FFH) */
    OLED_WR_Byte(0xDB,OLED_CMD); /* VCOM Deselect Level Mode Set:(DBH) */
    OLED_WR_Byte(0x40,OLED_CMD); /* VCOM Deselect Level Data Set:(00H - FFH) */
    OLED_WR_Byte(0x33,OLED_CMD); /* Set Pump voltage value: (30H~33H) */
    OLED_WR_Byte(0xA6,OLED_CMD); /* Set Normal/Reverse Display:(A6H -A7H) */
    OLED_Clear();
    SysTick_Delay_ms(100);
    OLED_WR_Byte(0xAF,OLED_CMD); /* Display OFF/ON:(AEH - AFH) */
    SysTick_Delay_ms(100);
	return 0;
}
