==> aaaaaaaalh/RA4M2_MINI_changevoice/firmware/RA4M2MINI/src/oled/bsp_oled.c <==
#include "bsp_oled.h"
#include "stdlib.h"
#include "oledfont.h"
#include "audio_buffer.h"
#include "hal_data.h"
#define OLED_SPECTRUM_BAR_NUM        32U
#define OLED_SPECTRUM_BAR_WIDTH      4U
#define OLED_SPECTRUM_FILL_WIDTH     3U
#define OLED_SPECTRUM_TOP            8U
#define OLED_SPECTRUM_BOTTOM         63U
#define OLED_SPECTRUM_HEIGHT         \
        (OLED_SPECTRUM_BOTTOM - OLED_SPECTRUM_TOP + 1U)
#define OLED_SPECTRUM_DB_MIN         (-60.0f)
#define OLED_SPECTRUM_DB_MAX         (0.0f)

void OLED_WR_Byte(u8 dat,u8 mode)
{
    R_IIC_MASTER_SlaveAddressSet(&g_i2c_master0_ctrl, 0x3C, I2C_MASTER_ADDR_MODE_7BIT);
    assert(FSP_SUCCESS == err);
    uint8_t ii[2]={0x00,0x00};
    if(mode)
        ii[0] = 0x40;
      else
        ii[0] = 0x00;
    ii[1] = dat;

    err = R_IIC_MASTER_Write(&g_i2c_master0_ctrl, ii, 0x02, true);
    assert(FSP_SUCCESS == err);
    /* Since there is nothing else to do, block until Callback triggers*/
    //while ((I2C_MASTER_EVENT_TX_COMPLETE != i2c_event) && timeout_ms)
    while ((I2C_MASTER_EVENT_TX_COMPLETE != i2c_event) && timeout_ms>0)
    {
     R_BSP_SoftwareDelay(100U, BSP_DELAY_UNITS_MICROSECONDS);
     timeout_ms--;
    }
    if (I2C_MASTER_EVENT_ABORTED == i2c_event)
    {
        __BKPT(0);
    }
    /* Read data back from the I2C slave */
    i2c_event = I2C_MASTER_EVENT_ABORTED;
    timeout_ms           = 100000;
}

void OLED_Init(void)
{
    /* Initialize the I2C module */
    err = R_IIC_MASTER_Open(&g_i2c_master0_ctrl, &g_i2c_master0_cfg);
    /* Handle any errors. This function should be defined by the user. */
    assert(FSP_SUCCESS == err);

    OLED_WR_Byte(0xAE,OLED_CMD);//--turn off oled panel

    OLED_WR_Byte(0x00,OLED_CMD);    /*set lower column address*/
    OLED_WR_Byte(0x10,OLED_CMD);    /*set higher column address*/

    OLED_WR_Byte(0xB0,OLED_CMD);    /*set page address*/

    OLED_WR_Byte(0x81,OLED_CMD);    /*contract control*/
    OLED_WR_Byte(0x5f,OLED_CMD);    /*128*/

    if(USE_HORIZONTAL==0)
    {
        OLED_WR_Byte(0x20,OLED_CMD);    /* Set Memory addressing mode (0x20/0x21) */
        OLED_WR_Byte(0x09,OLED_CMD);     /* 0x09 */

        OLED_WR_Byte(0xA1,OLED_CMD);    /*set segment remap  0XA1 */
        OLED_WR_Byte(0xC8,OLED_CMD);    /*Com scan direction   0Xc8  */
    }
    else if(USE_HORIZONTAL==90)
    {
        OLED_WR_Byte(0x20,OLED_CMD);    /* Set Memory addressing mode (0x20/0x21) */
        OLED_WR_Byte(0x02,OLED_CMD);     /* 0x02 */

        OLED_WR_Byte(0xA1,OLED_CMD);    /*set segment remap  0XA1 */
        OLED_WR_Byte(0xC0,OLED_CMD);    /*Com scan direction   0Xc0  */
    }
    else if(USE_HORIZONTAL==180)
    {
        OLED_WR_Byte(0x20,OLED_CMD);    /* Set Memory addressing mode (0x20/0x21) */
        OLED_WR_Byte(0x09,OLED_CMD);     /* 0x09 */

        OLED_WR_Byte(0xA0,OLED_CMD);    /*set segment remap  0XA0 */
        OLED_WR_Byte(0xC0,OLED_CMD);    /*Com scan direction   0Xc0  */
    }
    else if(USE_HORIZONTAL==270)
    {
        OLED_WR_Byte(0x20,OLED_CMD);    /* Set Memory addressing mode (0x20/0x21) */
        OLED_WR_Byte(0x02,OLED_CMD);     /* 0x02 */

        OLED_WR_Byte(0xA0,OLED_CMD);    /*set segment remap  0XA0 */
        OLED_WR_Byte(0xC8,OLED_CMD);    /*Com scan direction   0Xc8  */
    }

    OLED_WR_Byte(0xA4,OLED_CMD);    /*Disable Entire Display On (0xA4/0xA5)*/

    OLED_WR_Byte(0xA6,OLED_CMD);    /*normal / reverse*/

    OLED_WR_Byte(0xA8,OLED_CMD);    /*multiplex ratio*/
    OLED_WR_Byte(0x3F,OLED_CMD);    /*duty = 1/64*/

    OLED_WR_Byte(0xD3,OLED_CMD);    /*set display offset*/
    OLED_WR_Byte(0x00,OLED_CMD);    /*   0x20   */

    OLED_WR_Byte(0xD5,OLED_CMD);    /*set osc division*/
    OLED_WR_Byte(0x80,OLED_CMD);

    OLED_WR_Byte(0xD9,OLED_CMD);    /*set pre-charge period*/
    OLED_WR_Byte(0x22,OLED_CMD);

    OLED_WR_Byte(0xDA,OLED_CMD);    /* Set SEG Pins Hardware Configuration */
    OLED_WR_Byte(0x10,OLED_CMD);

    OLED_WR_Byte(0xdb,OLED_CMD);    /*set vcomh*/
    OLED_WR_Byte(0x30,OLED_CMD);

    OLED_WR_Byte(0x8d,OLED_CMD);    /*set charge pump enable*/
    OLED_WR_Byte(0x72,OLED_CMD);    /* 0x12:7.5V; 0x52:8V;  0x72:9V;  0x92:10V */
    OLED_Clear();
    OLED_WR_Byte(0xAF,OLED_CMD);

}
